[gd_scene load_steps=13 format=3 uid="uid://bk03xp6o028tl"]

[ext_resource type="Script" path="res://scenes/ui/character_selection_screen.gd" id="1_ac8tk"]
[ext_resource type="PackedScene" uid="uid://cpirxdsrphy4k" path="res://scenes/ui/character_selection_card.tscn" id="2_6r3ju"]
[ext_resource type="Resource" uid="uid://dsb7qgx72kcfw" path="res://resources/characters/sister.tres" id="3_tnhni"]
[ext_resource type="Resource" uid="uid://bkdwh0r7tay70" path="res://resources/characters/viking.tres" id="4_uymqh"]
[ext_resource type="Resource" uid="uid://d4juj47pbigbo" path="res://resources/characters/warrior.tres" id="5_lonm6"]
[ext_resource type="Resource" uid="uid://c31jf2n32eaei" path="res://resources/characters/wizard.tres" id="6_ox6kk"]
[ext_resource type="Texture2D" uid="uid://c23wms03aadps" path="res://assets/ui/forest.png" id="7_kxxi8"]
[ext_resource type="Texture2D" uid="uid://5tlgbpyi1hd0" path="res://scenes/game_objects/currency/currency.png" id="7_x1weu"]

[sub_resource type="Animation" id="Animation_s1spq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t3edd"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ga72d"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7q84c"]
_data = {
"RESET": SubResource("Animation_s1spq"),
"in": SubResource("Animation_t3edd"),
"out": SubResource("Animation_ga72d")
}

[node name="CharacterSelectionScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ac8tk")
character_card_scene = ExtResource("2_6r3ju")
character_list = Array[Resource("res://resources/characters/character.gd")]([ExtResource("3_tnhni"), ExtResource("4_uymqh"), ExtResource("5_lonm6"), ExtResource("6_ox6kk")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7q84c")
}
autoplay = "in"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_kxxi8")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Choose your character"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="CardContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MetaUpgradesButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Meta Upgrades"
icon = ExtResource("7_x1weu")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"
